feature: about us
	- implementation of about us section and components reusable components.
	- added configurations for colors.
	- added images about us.
	- added images about the technologies we use.

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,9 @@
 <body>
     <div class="index-stage">
         {% include 'organisms/navbar.html' %}
+
         {% include 'organisms/main.html' %}
+        {% include 'organisms/about_us.html' %}
     </div>
 </body>
 </html>
